--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     compile files('libs/ojdbc7.jar')
     compile group: 'mysql', name: 'mysql-connector-java', version: '6.0.6'
     compile group: 'org.postgresql', name: 'postgresql', version: '42.1.3'
+	compile group: 'com.microsoft.sqlserver', name: 'mssql-jdbc', version: '8.2.1.jre8'
 }
 
 task fatJar(type: Jar) {
