--- a/build.gradle
+++ b/build.gradle
@@ -25,5 +25,10 @@ task fatJar(type: Jar) {
     }
     baseName = project.name + '-all'
     from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+		{
+		  exclude "META-INF/*.SF"
+		  exclude "META-INF/*.DSA"
+		  exclude "META-INF/*.RSA"
+		}
     with jar
 }
