properties for SQL Server

--- a/db.properties
+++ b/db.properties
@@ -1,4 +1,4 @@
-driver=oracle.jdbc.OracleDriver
-url=jdbc:oracle:thin:@localhost:1521:xe
+driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
+url=jdbc:sqlserver://127.0.0.1:1433;databaseName=AdventureWorks
 username=username
 password=password
