--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,8 @@ task fatJar(type: Jar) {
 		  exclude "META-INF/*.SF"
 		  exclude "META-INF/*.DSA"
 		  exclude "META-INF/*.RSA"
+		  exclude "META-INF/LICENSE.txt"
+          exclude "META-INF/NOTICE.txt"		  
 		}
     with jar
 }
